<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".DashboardFragment">

    <TextView
        android:id="@+id/ongoingClassTitle"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="8dp"
        android:layout_marginTop="8dp"
        android:layout_marginEnd="8dp"
        android:fontFamily="sans-serif-condensed"
        android:text="@string/ongoing_lecture"
        android:textSize="18sp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <TextView
        android:id="@+id/nextClassTitle"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="8dp"
        android:layout_marginTop="8dp"
        android:layout_marginEnd="8dp"
        android:fontFamily="sans-serif-condensed"
        android:text="@string/next_lecture"
        android:textSize="18sp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/ongoingClassCardView" />

    <androidx.constraintlayout.widget.ConstraintLayout
        android:id="@+id/ongoingClassCardView"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginStart="8dp"
        android:layout_marginTop="8dp"
        android:layout_marginEnd="8dp"
        android:background="@drawable/card_background"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="1.0"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/ongoingClassTitle">

        <TextView
            android:id="@+id/subjectTextView"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="8dp"
            android:layout_marginTop="4dp"
            android:fontFamily="sans-serif-condensed-medium"
            android:text="@string/example_subject"
            android:textSize="20sp"
            app:layout_constraintBottom_toTopOf="@+id/subjectTeacherTextView"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/lectureNumberTextView" />

        <TextView
            android:id="@+id/subjectTeacherTextView"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="8dp"
            android:layout_marginTop="4dp"
            android:fontFamily="sans-serif-condensed-light"
            android:text="@string/example_subject_teacher"
            android:textSize="18sp"
            app:layout_constraintBottom_toTopOf="@+id/classRoomHeaderTextView"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/subjectTextView" />

        <TextView
            android:id="@+id/lectureNumberTextView"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="8dp"
            android:layout_marginTop="8dp"
            android:layout_marginEnd="8dp"
            android:text="@string/example_lecture_number"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent" />

        <TextView
            android:id="@+id/classRoomHeaderTextView"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="8dp"
            android:layout_marginTop="4dp"
            android:fontFamily="sans-serif-condensed-light"
            android:text="@string/class_room_header"
            app:layout_constraintBottom_toTopOf="@+id/classRoomTextView"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/subjectTeacherTextView" />

        <TextView
            android:id="@+id/classRoomTextView"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="8dp"
            android:layout_marginTop="4dp"
            android:layout_marginBottom="4dp"
            android:fontFamily="sans-serif-condensed-medium"
            android:text="@string/example_class_room"
            android:textSize="30sp"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/classRoomHeaderTextView" />

        <TextView
            android:id="@+id/timeTextView"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginEnd="8dp"
            android:fontFamily="sans-serif-medium"
            android:text="@string/example_time_string"
            app:layout_constraintBottom_toBottomOf="@+id/classRoomTextView"
            app:layout_constraintEnd_toEndOf="parent" />

        <com.dinuscxj.progressbar.CircleProgressBar
            android:id="@+id/circular_progress"
            android:layout_width="80dp"
            android:layout_height="80dp"
            android:layout_marginTop="4dp"
            android:layout_marginEnd="8dp"
            android:layout_marginBottom="8dp"
            app:layout_constraintBottom_toTopOf="@+id/timeTextView"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/lectureNumberTextView"
            app:progress_shader="sweep"
            app:progress_start_color="@color/colorAccent"
            app:progress_start_degree="-90"
            app:progress_stroke_width="4dp"
            app:progress_text_color="@color/colorPrimary"
            app:progress_text_size="20dp"
            app:style="solid_line" />
    </androidx.constraintlayout.widget.ConstraintLayout>

    <androidx.constraintlayout.widget.ConstraintLayout
        android:id="@+id/upcomingClassCardView"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginStart="8dp"
        android:layout_marginTop="8dp"
        android:layout_marginEnd="8dp"
        android:background="@drawable/card_background"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/nextClassTitle">

        <TextView
            android:id="@+id/nextSubjectTextView"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="8dp"
            android:layout_marginTop="4dp"
            android:fontFamily="sans-serif-condensed-medium"
            android:text="@string/example_subject"
            android:textSize="20sp"
            app:layout_constraintBottom_toTopOf="@+id/nextSubjectTeacherTextView"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/nextLectureNumberTextView" />

        <TextView
            android:id="@+id/nextSubjectTeacherTextView"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="8dp"
            android:layout_marginTop="4dp"
            android:fontFamily="sans-serif-condensed-light"
            android:text="@string/example_subject_teacher"
            android:textSize="18sp"
            app:layout_constraintBottom_toTopOf="@+id/nextClassRoomHeaderTextView"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/nextSubjectTextView" />

        <TextView
            android:id="@+id/nextLectureNumberTextView"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="8dp"
            android:layout_marginTop="8dp"
            android:layout_marginEnd="8dp"
            android:text="@string/example_lecture_number"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent" />

        <TextView
            android:id="@+id/nextClassRoomHeaderTextView"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="8dp"
            android:layout_marginTop="4dp"
            android:fontFamily="sans-serif-condensed-light"
            android:text="@string/class_room_header"
            app:layout_constraintBottom_toTopOf="@+id/nextClassRoomTextView"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/nextSubjectTeacherTextView" />

        <TextView
            android:id="@+id/nextClassRoomTextView"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="8dp"
            android:layout_marginTop="4dp"
            android:layout_marginBottom="4dp"
            android:fontFamily="sans-serif-condensed-medium"
            android:text="@string/example_class_room"
            android:textSize="30sp"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/nextClassRoomHeaderTextView" />

        <TextView
            android:id="@+id/nextTimeTextView"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginEnd="8dp"
            android:fontFamily="sans-serif-medium"
            android:text="@string/example_time_string"
            app:layout_constraintBottom_toBottomOf="@+id/nextClassRoomTextView"
            app:layout_constraintEnd_toEndOf="parent" />

        <com.dinuscxj.progressbar.CircleProgressBar
            android:id="@+id/nextCircular_progress"
            android:layout_width="80dp"
            android:layout_height="80dp"
            android:layout_marginTop="4dp"
            android:layout_marginEnd="8dp"
            android:layout_marginBottom="8dp"
            app:layout_constraintBottom_toTopOf="@+id/nextTimeTextView"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/nextLectureNumberTextView"
            app:progress_shader="sweep"
            app:progress_start_color="@color/colorAccent"
            app:progress_start_degree="-90"
            app:progress_stroke_width="4dp"
            app:progress_text_color="@color/colorPrimary"
            app:progress_text_size="20dp"
            app:style="solid_line" />
    </androidx.constraintlayout.widget.ConstraintLayout>
</androidx.constraintlayout.widget.ConstraintLayout>